--- a/Index.html
+++ b/Index.html
@@ -78,12 +78,12 @@
         margin-bottom: 20px;
       }
       .logo {
-        width: 120px; /* Customize the size as needed */
+        width: 120px;
         height: auto;
         margin-right: 10px;
       }
       .company-name {
-        font-size: 26px; /* Customize font size */
+        font-size: 26px;
         color: #2c3e50;
       }
       .title {
@@ -182,11 +182,15 @@
 
         try {
           // Replace with your actual API endpoint
-          const response = await fetch(`https://api.physicianrecruiting.com/job_listings?specialty=${encodeURIComponent(specialty)}&subspecialty=${encodeURIComponent(subspecialty)}&location=${encodeURIComponent(location)}&radius=${radius}`);
+          const response = await fetch(`https://api.physicianrecruiting.com/job_listings?specialty=${encodeURIComponent(specialty)}&subspecialty=${encodeURIComponent(subspecialty)}&location=${encodeURICo[...]
           const employerDirectListings = await response.json();
 
           // Clear the map before adding new markers
-          window.mapContainer.removeLayers();
+          window.mapContainer.eachLayer(function (layer) {
+            if (layer instanceof L.Marker) {
+              window.mapContainer.removeLayer(layer);
+            }
+          });
 
           // Filter out third-party job boards and agencies
           const filteredListings = employerDirectListings.filter(listing => 
@@ -226,11 +230,14 @@
       }
       
       function updateMap() {
-        window.mapContainer = L.map('map').setView([37.7749, -122.4194], 5); // Default to USA view
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-          maxZoom: 19,
-          attribution: '© OpenStreetMap'
-        }).addTo(window.mapContainer);
+        if (!window.mapContainer) {
+          window.mapContainer = L.map('map').setView([37.7749, -122.4194], 5); // Default to USA view
+          L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            maxZoom: 19,
+            attribution: '© OpenStreetMap'
+          }).addTo(window.mapContainer);
+        }
+        window.mapContainer.invalidateSize(); // Ensure map is displayed correctly
       }
       
       function exportCSV() {
